kubernetes/pod-basic-flask.yaml
apiVersion: v1
kind: Pod
metadata:
  name: basic-flask-app
  labels:
    pl-app: demo-project-1
    pl-tier: frontend
    pl-env: prod
spec:
  containers:
  - name: ctr-basic-flask-app
    image: fedora800/basic-flask-app:v1
    ports:
    - containerPort: 5000


# root@controlplane:~$ curl <node-ip-where-pod-runs>:5000
# <!DOCTYPE html>
# <html lang="en">
# <head>
#     <meta charset="UTF-8">
#     <title>Index page</title>
# </head>
# <body>
# The hostname of the container is <b>basic-flask-app</b> and its IP is <b>192.168.1.5</b>.
# </body>

# $ kl get pods -o wide --show-labels
# NAME                                       READY   STATUS    RESTARTS       AGE     IP              NODE          NOMINATED NODE   READINESS GATES   LABELS
# basic-flask-app                            1/1     Running   0              63s     192.168.185.8   acg-worker1   <none>           <none>            pl-component=frontend

# $ kubectl logs basic-flask-app
#  * Serving Flask app 'app'
#  * Debug mode: on
# WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
#  * Running on all addresses (0.0.0.0)
#  * Running on http://127.0.0.1:5000
#  * Running on http://192.168.1.5:5000
# Press CTRL+C to quit
#  * Restarting with stat
#  * Debugger is active!
#  * Debugger PIN: 497-982-952
