kubernetes/pod-multicontainers.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: pod-multi-4-containers
  labels:
    pl-tier: staging
spec:
  containers:
  - name: ctr-1-nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80

  - name: ctr-2-redis
    image: redis:latest

  - name: ctr-3-busybox-1
    image: busybox:1.28
    command: ['sh', '-c', 'date; echo "container 3 is Running" ; sleep 3600']

  - name: ctr-4-busybox-2
    image: busybox:1.36
    command: ['sh', '-c', 'date; echo "container 4 is Running" ; sleep 3600']
