kubernetes/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-clusterip
spec:
  type: ClusterIP
  selector:
    tier: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

#$ kubectl get service svc-clusterip
#NAME            TYPE        CLUSTER-IP      EXTERNAL-IP   PORT(S)   AGE
#svc-clusterip   ClusterIP   10.109.92.152   <none>        80/TCP    121m
#
#$ kubectl get endpoints svc-clusterip
#NAME            ENDPOINTS                                              AGE
#svc-clusterip   192.168.16.14:80,192.168.185.47:80,192.168.185.53:80   121m
#
#$ kubectl describe service svc-clusterip
#Name:              svc-clusterip
#Namespace:         default
#Labels:            <none>
#Annotations:       <none>
#Selector:          tier=frontend
#Type:              ClusterIP
#IP Family Policy:  SingleStack
#IP Families:       IPv4
#IP:                10.109.92.152
#IPs:               10.109.92.152
#Port:              <unset>  80/TCP
#TargetPort:        80/TCP
#Endpoints:         192.168.16.14:80,192.168.185.47:80,192.168.185.53:80
#Session Affinity:  None
#Events:            <none>


#$ kubectl exec pod-netshoot -- curl svc-clusterip:80                   ## this should work for me but does not, it works partially (only snme pods) if i give the svc ip addr instead
