kubernetes/svc-db-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  type: ClusterIP
  ports:
  - name: db-postgres-service-port
    port: 5432
    targetPort: 5432
  selector:
    app: db
