kubernetes/svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-loadbalancer
  labels:
    app: example-app
spec:
  type: LoadBalancer
  selector:
    app: example-app
  ports:
    - protocol: TCP
      port: 80         # Port that the service will expose
      targetPort: 8080 # Port on the container to forward to
  # Optional: you can specify a load balancer IP if required
  # loadBalancerIP: <external-ip>
